quit means something in irb...

--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@ end
           <h3>Let's Develop It</h3>
           <ul>
             <li>Write a program that obtains user input like the last program</li>
-            <li>This program should not exit until the user says it should (maybe by entering "quit"?)</li>
+            <li>This program should not exit until the user says it should (maybe by entering "stop"?)</li>
             <li>Use a loop!</li>
             <li>You can use the next slide as an example.</li>
           </ul>
